@@ -1,5 +1,6 @@
 trunk
 =====
+* added 'vector' argument to mxFIMLObjective() function. Specifies whether to return the likelihood vector (if TRUE) or the sum of log likelihoods (if FALSE). Default value is FALSE.
 
 
 Release 0.2.2-951
